@@ -524,10 +524,17 @@ $modversion['config'][$i]['default'] = 1600;
 $modversion['config'][$i]['formtype'] = 'textbox';
 $modversion['config'][$i]['valuetype'] = 'int';
 $i++;
-$modversion['config'][$i]['name'] = 'maxfilesize';
-$modversion['config'][$i]['title'] = '_MI_PROFILE_MAXFILEBYTES_TITLE';
-$modversion['config'][$i]['description'] = '_MI_PROFILE_MAXFILEBYTES_DESC';
+$modversion['config'][$i]['name'] = 'maxfilesize_picture';
+$modversion['config'][$i]['title'] = '_MI_PROFILE_MAXFILEBYTES_PICTURE_TITLE';
+$modversion['config'][$i]['description'] = '_MI_PROFILE_MAXFILEBYTES_PICTURE_DESC';
 $modversion['config'][$i]['default'] = 512000;
+$modversion['config'][$i]['formtype'] = 'textbox';
+$modversion['config'][$i]['valuetype'] = 'int';
+$i++;
+$modversion['config'][$i]['name'] = 'maxfilesize_audio';
+$modversion['config'][$i]['title'] = '_MI_PROFILE_MAXFILEBYTES_AUDIO_TITLE';
+$modversion['config'][$i]['description'] = '_MI_PROFILE_MAXFILEBYTES_AUDIO_DESC';
+$modversion['config'][$i]['default'] = 5242880;
 $modversion['config'][$i]['formtype'] = 'textbox';
 $modversion['config'][$i]['valuetype'] = 'int';
 $i++;
