@@ -81,6 +81,7 @@ Revision:
 * #462: all smilies are rendered properly now (Phoenyx)
 * #655: control panel header is now displayed properly when updating a module (Phoenyx)
 * #706: other languages than english are working for protector preferences now as well (Phoenyx)
+* #269: audio files can now be added properly | ticket from addons (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
